--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
 	<script type="text/javascript" src="paper-full.js"></script>
 	<link rel="stylesheet" type="text/css" href="circles.css">
 	<script type="text/paperscript" canvas="myCanvas">
-		
 
-	</script>
+		function onKeyDown(event) {
+		var maxPoint = new Point(view.size.width, view.size.height);
+		var randomPoint = Point.random();
+		var point = maxPoint * randomPoint;
+
+		new Path.Circle(point, 10).fillColor = 'orange';
+	}
+</script>
 </head>
 <body>
 	<canvas id="myCanvas" resize></canvas>
