--- a/index.html
+++ b/index.html
@@ -183,8 +183,12 @@ circles.push(newCircle);
 
 function onFrame(event){
 for(var i = 0; i < circles.length; i++){
+circles[i].scale(0.9);
 circles[i].fillColor.hue += 1;
-circles[i].scale(.9);
+if(circles[i].area < 1){
+circles[i].remove(); 
+circles.splice(i, 1); 
+}
 }
 }
 
